--- a/style.css
+++ b/style.css
@@ -62,10 +62,15 @@ button {
   width: 100%;
   padding: 10px;
   border: none;
+  margin-bottom: 1rem;
   background: #2c786c;
   color: white;
   font-size: 16px;
   cursor: pointer;
+}
+
+.hiddenButton {
+  display: none;
 }
 
 button:hover {
